Full setup and corrections

--- a/processing-consumer-api/pom.xml
+++ b/processing-consumer-api/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-	<artifactId>messaging-producer-api</artifactId>
-	<name>messaging-producer-api</name>
-	<description>Receives requests and routes them to the appropriate processing API (consumer).</description>
+	<artifactId>processing-consumer-api</artifactId>
+	<name>processing-consumer-api</name>
+	<description>Consumes and processes the content received from the messaging API, often returning a result or status.</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -26,16 +26,15 @@
 	</scm>
 	<properties>
 		<java.version>25</java.version>
-        <maven.test.skip>true</maven.test.skip>
 	</properties>
 	<dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
         <dependency>
             <groupId>com.example</groupId>
